# multi-language-bazel-monorepo

./: .envrc  .gitignore  .gitlint  .gitmessage  .pre-commit-config.yaml  BUILD  MODULE.bazel  README.md  envrc.bak  flake.nix  go.work  package.json  pnpm-lock.yaml  shell.nix
.github/workflows/: main.yaml
projects/calculator/: BUILD  calculator_test.py
projects/genrule_a/: BUILD
projects/genrule_b/: BUILD
projects/go_hello_world/: BUILD  go.mod
projects/go_web/: BUILD  go.mod  main.go
projects/my-python-app/: BUILD  main.py
projects/node_calculator/: BUILD  calculator.js  calculator.spec.js
projects/node_web/: BUILD
projects/python_calculator/: BUILD  calculator_test.py
projects/python_web/: BUILD  main.py
projects/rust_hello_world/: BUILD
projects/rust_hello_world/src/: main.rs
projects/rust_hello_world_lib/: BUILD
projects/rust_hello_world_lib/src/: greeter.rs
requirements/: README.md  requirements_lock_3_10.txt
